infra/cdk.out/agentis-genesis-vpc-development.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/Resource"
   }
  },
  "VpcpublicSubnet1Subnet2BB74ED7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/publicSubnet1/Subnet"
   }
  },
  "VpcpublicSubnet1RouteTable15C15F8E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/publicSubnet1/RouteTable"
   }
  },
  "VpcpublicSubnet1RouteTableAssociation4E83B6E4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet1DefaultRouteB88F9E93": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/publicSubnet1/DefaultRoute"
   }
  },
  "VpcpublicSubnet1EIP411541E6": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/publicSubnet1/EIP"
   }
  },
  "VpcpublicSubnet1NATGatewayA036E8A6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcpublicSubnet1EIP411541E6",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcpublicSubnet1DefaultRouteB88F9E93",
    "VpcpublicSubnet1RouteTableAssociation4E83B6E4"
   ],
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/publicSubnet1/NATGateway"
   }
  },
  "VpcpublicSubnet2SubnetE34B022A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/publicSubnet2/Subnet"
   }
  },
  "VpcpublicSubnet2RouteTableC5A6DF77": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/publicSubnet2/RouteTable"
   }
  },
  "VpcpublicSubnet2RouteTableAssociationCCE257FF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet2SubnetE34B022A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet2DefaultRoute732F0BEB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/publicSubnet2/DefaultRoute"
   }
  },
  "VpcprivateSubnet1SubnetCEAD3716": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/privateSubnet1/Subnet"
   }
  },
  "VpcprivateSubnet1RouteTable1979EACB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/privateSubnet1/RouteTable"
   }
  },
  "VpcprivateSubnet1RouteTableAssociationEEBD93CE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateSubnet1RouteTable1979EACB"
    },
    "SubnetId": {
     "Ref": "VpcprivateSubnet1SubnetCEAD3716"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "VpcprivateSubnet1DefaultRouteB506891A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcprivateSubnet1RouteTable1979EACB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/privateSubnet1/DefaultRoute"
   }
  },
  "VpcprivateSubnet2Subnet2DE7549C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/privateSubnet2/Subnet"
   }
  },
  "VpcprivateSubnet2RouteTable4D0FFC8C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/privateSubnet2/RouteTable"
   }
  },
  "VpcprivateSubnet2RouteTableAssociationB691E645": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateSubnet2RouteTable4D0FFC8C"
    },
    "SubnetId": {
     "Ref": "VpcprivateSubnet2Subnet2DE7549C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "VpcprivateSubnet2DefaultRouteBAC3C1C3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcprivateSubnet2RouteTable4D0FFC8C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/privateSubnet2/DefaultRoute"
   }
  },
  "VpcdatabaseSubnet1SubnetD53A427B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "database"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/databaseSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/databaseSubnet1/Subnet"
   }
  },
  "VpcdatabaseSubnet1RouteTableF3B572E4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/databaseSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/databaseSubnet1/RouteTable"
   }
  },
  "VpcdatabaseSubnet1RouteTableAssociationEE6CA36B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcdatabaseSubnet1RouteTableF3B572E4"
    },
    "SubnetId": {
     "Ref": "VpcdatabaseSubnet1SubnetD53A427B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/databaseSubnet1/RouteTableAssociation"
   }
  },
  "VpcdatabaseSubnet2Subnet75663D63": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "database"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/databaseSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/databaseSubnet2/Subnet"
   }
  },
  "VpcdatabaseSubnet2RouteTable1E50BD8E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development/Vpc/databaseSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/databaseSubnet2/RouteTable"
   }
  },
  "VpcdatabaseSubnet2RouteTableAssociationCADBAF9A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcdatabaseSubnet2RouteTable1E50BD8E"
    },
    "SubnetId": {
     "Ref": "VpcdatabaseSubnet2Subnet75663D63"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/databaseSubnet2/RouteTableAssociation"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "agentis-genesis-vpc-development"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/Vpc/VPCGW"
   }
  },
  "LambdaSecurityGroup0BD9FC99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Lambda functions",
    "GroupName": "agentis-genesis-lambda-sg-development",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTPS outbound for AWS APIs",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/LambdaSecurityGroup/Resource"
   }
  },
  "LambdaSecurityGrouptoagentisgenesisvpcdevelopmentDatabaseSecurityGroup366E2E433306EDC28A1D": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Allow Lambda to connect to RDS Proxy",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "DatabaseSecurityGroup7319C0F6",
      "GroupId"
     ]
    },
    "FromPort": 3306,
    "GroupId": {
     "Fn::GetAtt": [
      "LambdaSecurityGroup0BD9FC99",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 3306
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/LambdaSecurityGroup/to agentisgenesisvpcdevelopmentDatabaseSecurityGroup366E2E43:3306"
   }
  },
  "DatabaseSecurityGroup7319C0F6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for RDS MariaDB",
    "GroupName": "agentis-genesis-db-sg-development",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "SecurityGroupIngress": [
     {
      "Description": "Allow Lambda to connect to MariaDB via RDS Proxy",
      "FromPort": 3306,
      "IpProtocol": "tcp",
      "SourceSecurityGroupId": {
       "Fn::GetAtt": [
        "LambdaSecurityGroup0BD9FC99",
        "GroupId"
       ]
      },
      "ToPort": 3306
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/DatabaseSecurityGroup/Resource"
   }
  },
  "DatabaseSubnetGroup": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for Genesis MariaDB",
    "DBSubnetGroupName": "agentis-genesis-db-subnet-development",
    "SubnetIds": [
     {
      "Ref": "VpcdatabaseSubnet1SubnetD53A427B"
     },
     {
      "Ref": "VpcdatabaseSubnet2Subnet75663D63"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/DatabaseSubnetGroup/Default"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/32OwU7DQAxEv6X3zQLLgXMpVdULRAnqFTkbA27T3WhtN6qi/DtKgxJOnGb8NBqPs+7pwd6voOPM16esocr2pYA/Gej4o0fvbH9ovdl8hkO+MblWDflSq4AyssUVUQXfoWpw4QtbM0dPIBTDHB7Ndp+P8gqyA8EOriZPdAHBpXgfBFPAOTAt+b3WIuC/zxjElOg1kVx3KWp72/Av2H4lZB5Mqtn207c5+PL8BwyDKZCjJn9b/KbSqgwmxBrtke8uzln3aN3qyERZ0iB0RltM+gPMwnW5XwEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "agentis-genesis-vpc-development/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Value": {
    "Ref": "Vpc8378EB38"
   },
   "Export": {
    "Name": "agentis-genesis-vpc-id-development"
   }
  },
  "DatabaseSecurityGroupId": {
   "Value": {
    "Fn::GetAtt": [
     "DatabaseSecurityGroup7319C0F6",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "agentis-genesis-db-sg-id-development"
   }
  },
  "LambdaSecurityGroupId": {
   "Value": {
    "Fn::GetAtt": [
     "LambdaSecurityGroup0BD9FC99",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "agentis-genesis-lambda-sg-id-development"
   }
  },
  "PrivateSubnetIds": {
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Ref": "VpcprivateSubnet1SubnetCEAD3716"
      },
      ",",
      {
       "Ref": "VpcprivateSubnet2Subnet2DE7549C"
      }
     ]
    ]
   },
   "Export": {
    "Name": "agentis-genesis-private-subnet-ids-development"
   }
  },
  "DatabaseSubnetIds": {
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Ref": "VpcdatabaseSubnet1SubnetD53A427B"
      },
      ",",
      {
       "Ref": "VpcdatabaseSubnet2Subnet75663D63"
      }
     ]
    ]
   },
   "Export": {
    "Name": "agentis-genesis-database-subnet-ids-development"
   }
  },
  "DatabaseSubnetGroupName": {
   "Value": {
    "Ref": "DatabaseSubnetGroup"
   },
   "Export": {
    "Name": "agentis-genesis-db-subnet-group-name-development"
   }
  },
  "AvailabilityZones": {
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Fn::Select": [
        0,
        {
         "Fn::GetAZs": ""
        }
       ]
      },
      ",",
      {
       "Fn::Select": [
        1,
        {
         "Fn::GetAZs": ""
        }
       ]
      }
     ]
    ]
   },
   "Export": {
    "Name": "agentis-genesis-availability-zones-development"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
